src/pattern/51Degrees.h


typedef unsigned char byte;
typedef enum e_fiftyoneDegrees_DataSetInitStatus {
	DATA_SET_INIT_STATUS_SUCCESS, 
	DATA_SET_INIT_STATUS_INSUFFICIENT_MEMORY, 
	DATA_SET_INIT_STATUS_CORRUPT_DATA, 
	DATA_SET_INIT_STATUS_INCORRECT_VERSION, 
	DATA_SET_INIT_STATUS_FILE_NOT_FOUND, 
	DATA_SET_INIT_STATUS_NOT_SET, 
	DATA_SET_INIT_STATUS_POINTER_OUT_OF_BOUNDS,
	DATA_SET_INIT_STATUS_NULL_POINTER 
} fiftyoneDegreesDataSetInitStatus;
typedef struct fiftyoneDegrees_component_t {
	const byte componentId; 
	const int32_t nameOffset; 
	const int32_t defaultProfileOffset; 
	const uint16_t httpHeaderCount; 
} fiftyoneDegreesComponent;
typedef struct fiftyoneDegrees_map_t {
	const int32_t nameOffset; 
} fiftyoneDegreesMap;
typedef struct fiftyoneDegrees_node_t {
	const int16_t position;
	const int16_t nextCharacterPosition;
	const int32_t parentOffset;
	const int32_t characterStringOffset;
	const int16_t childrenCount;
	const int16_t numericChildrenCount;
	const uint16_t signatureCount;
} fiftyoneDegreesNode;
typedef struct fiftyoneDegrees_profile_offset_t {
	const int32_t profileId; 
	const int32_t offset; 
} fiftyoneDegreesProfileOffset;
typedef struct property_t {
	const byte componentIndex; 
	const byte displayOrder; 
	const byte isMandatory; 
	const byte isList; 
	const byte showValues; 
	const byte isObsolete; 
	const byte show; 
	const byte valueType; 
	const int32_t defaultValueIndex; 
	const int32_t nameOffset; 
	const int32_t descriptionOffset; 
	const int32_t categoryOffset; 
	const int32_t urlOffset; 
	const int32_t firstValueIndex; 
	const int32_t lastValueIndex; 
	const int32_t mapCount; 
	const int32_t firstMapIndex; 
} fiftyoneDegreesProperty;
typedef struct fiftyoneDegrees_value_t {
	const int16_t propertyIndex; 
	const int32_t nameOffset; 
	const int32_t descriptionOffset; 
	const int32_t urlOffset; 
} fiftyoneDegreesValue;
typedef struct fiftyoneDegrees_profile_t {
	const byte componentIndex;
	const int32_t profileId;
	const int32_t valueCount;
	const int32_t signatureCount;
} fiftyoneDegreesProfile;
typedef struct fiftyoneDegrees_dataset_header_t {
	const int32_t versionMajor;
	const int32_t versionMinor;
	const int32_t versionBuild;
	const int32_t versionRevision;
	const byte tag[16];
	const byte exportTag[16];
	const int32_t copyrightOffset;
	const int16_t age;
	const int32_t minUserAgentCount;
	const int32_t nameOffset;
	const int32_t formatOffset;
	const fiftyoneDegreesDate published;
	const fiftyoneDegreesDate nextUpdate;
	const int32_t deviceCombinations;
	const int16_t maxUserAgentLength;
	const int16_t minUserAgentLength;
	const char lowestCharacter;
	const char highestCharacter;
	const int32_t maxSignatures;
	const int32_t signatureProfilesCount;
	const int32_t signatureNodesCount;
	const int16_t maxValues;
	const int32_t csvBufferLength;
	const int32_t jsonBufferLength;
	const int32_t xmlBufferLength;
	const int32_t maxSignaturesClosest;
	const int32_t maxRank;
	const fiftyoneDegreesEntityHeader strings;
	const fiftyoneDegreesEntityHeader components;
	const fiftyoneDegreesEntityHeader maps;
	const fiftyoneDegreesEntityHeader properties;
	const fiftyoneDegreesEntityHeader values;
	const fiftyoneDegreesEntityHeader profiles;
	const fiftyoneDegreesEntityHeader signatures;
	const fiftyoneDegreesEntityHeader signatureNodeOffsets;
	const fiftyoneDegreesEntityHeader nodeRankedSignatureIndexes;
	const fiftyoneDegreesEntityHeader rankedSignatureIndexes;
	const fiftyoneDegreesEntityHeader nodes;
	const fiftyoneDegreesEntityHeader rootNodes;
	const fiftyoneDegreesEntityHeader profileOffsets;
} fiftyoneDegreesDataSetHeader;
typedef struct fiftyoneDegrees_http_header_t {
	int32_t headerNameOffset; 
	const char *headerName; 
} fiftyoneDegreesHttpHeader;
typedef struct fiftyoneDegrees_profile_struct_t {
	int32_t count;
	fiftyoneDegreesProfile **profiles;
	int32_t *indexes;
} fiftyoneDegreesProfilesStruct;
typedef struct fiftyoneDegrees_profile_struct_array_t{
	int32_t initialised;
	fiftyoneDegreesProfileIndexesStruct *profilesStructs;
#ifndef FIFTYONEDEGREES_NO_THREADING
	FIFTYONEDEGREES_MUTEX lock;
#endif
} fiftyoneDegreesProfilesStructArray;
typedef struct fiftyoneDegrees_dataset_t {
	const fiftyoneDegreesDataSetHeader header;
	const void* memoryToFree; 
	int32_t sizeOfSignature; 
	int32_t signatureStartOfStruct; 
	const fiftyoneDegreesProperty **requiredProperties; 
	int32_t requiredPropertyCount; 
	const byte *strings;
	const byte *componentsData;
	const fiftyoneDegreesComponent **components;
	const fiftyoneDegreesMap *maps;
	const fiftyoneDegreesProperty *properties;
	const fiftyoneDegreesValue *values;
	const byte *profiles;
	const byte *signatures;
	const int32_t *signatureNodeOffsets;
	const int32_t *nodeRankedSignatureIndexes;
	const int32_t *rankedSignatureIndexes;
	const byte *nodes;
	const fiftyoneDegreesNode **rootNodes; 
	const fiftyoneDegreesProfileOffset *profileOffsets;
	int32_t httpHeadersCount; 
	fiftyoneDegreesHttpHeader *httpHeaders; 
	const char **prefixedUpperHttpHeaders; 
	fiftyoneDegreesProfilesStructArray *valuePointersArray;
	int32_t *maxPropertyValueLength;
	const char *fileName; 
} fiftyoneDegreesDataSet;
typedef struct fiftyoneDegrees_linked_signature_list_t {
	const fiftyoneDegreesLinkedSignatureListItem *items; 
	fiftyoneDegreesLinkedSignatureListItem *first; 
	fiftyoneDegreesLinkedSignatureListItem *last; 
	int32_t count; 
	fiftyoneDegreesLinkedSignatureListItem *current; 
} fiftyoneDegreesLinkedSignatureList;
typedef struct fiftyoneDegrees_http_header_workset_t {
	fiftyoneDegreesHttpHeader *header; 
	const char *headerValue; 
	int headerValueLength; 
} fiftyoneDegreesHttpHeaderWorkset;
typedef struct fiftyoneDegrees_workset_pool_t fiftyoneDegreesWorksetPool;
typedef struct fiftyoneDegrees_workset_t {
	FIFTYONE_DEGREES_COMMON_SET_FIELDS
	const fiftyoneDegreesValue **values; 
	int32_t valuesCount; 
	char *input; 
	char *targetUserAgent; 
	char *relevantNodes; 
	char *closestNodes; 
	char *signatureAsString; 
	char *tempheaderlowercase; 
	const fiftyoneDegreesNode **nodes; 
	const fiftyoneDegreesNode **orderedNodes; 
	int32_t nodeCount; 
	int32_t closestNodeRankedSignatureIndex; 
	fiftyoneDegreesLinkedSignatureList linkedSignatureList; 
	int16_t nextCharacterPositionIndex;
	byte startWithInitialScore; 
	int(*functionPtrGetScore)(struct fiftyoneDegrees_workset_t *ws, const fiftyoneDegreesNode *node); 
	const byte* (*functionPtrNextClosestSignature)(struct fiftyoneDegrees_workset_t *ws); 
	const fiftyoneDegreesProfile **tempProfiles; 
	int32_t importantHeadersCount; 
	fiftyoneDegreesHttpHeaderWorkset *importantHeaders; 
	const fiftyoneDegreesWorksetPool *associatedPool; 
} fiftyoneDegreesWorkset;
typedef struct fiftyoneDegrees_provider_t fiftyoneDegreesProvider;
struct fiftyoneDegrees_workset_pool_t {
	const fiftyoneDegreesDataSet *dataSet; 
	fiftyoneDegreesResultsetCache *cache; 
	const fiftyoneDegreesProvider *provider; 
	int32_t size; 
	int32_t available; 
	fiftyoneDegreesWorkset **worksets; 
#ifndef FIFTYONEDEGREES_NO_THREADING
	FIFTYONEDEGREES_SIGNAL *signalPtr; 
	FIFTYONEDEGREES_MUTEX *lockPtr; 
	FIFTYONEDEGREES_SIGNAL signal; 
	FIFTYONEDEGREES_MUTEX lock; 
#endif
};
EXTERNAL fiftyoneDegreesDataSetInitStatus fiftyoneDegreesInitProviderWithPropertyArray(
	const char *fileName,
	fiftyoneDegreesProvider *provider,
	const char** properties,
	int32_t count,
	int poolSize,
	int cacheSize);
EXTERNAL fiftyoneDegreesDataSetInitStatus fiftyoneDegreesInitProviderWithPropertyString(
	const char *fileName,
	fiftyoneDegreesProvider *provider,
	const char* properties,
	int poolSize,
	int cacheSize);
EXTERNAL fiftyoneDegreesProfilesStruct *fiftyoneDegreesFindProfiles(
	const fiftyoneDegreesDataSet *dataSet,
	const char *propertyName,
	const char *valueName);
EXTERNAL fiftyoneDegreesProfilesStruct *fiftyoneDegreesFindProfilesInProfiles(
	const fiftyoneDegreesDataSet *dataSet,
	const char *propertyName,
	const char *valueName,
	fiftyoneDegreesProfilesStruct *profilesList);
EXTERNAL void fiftyoneDegreesFreeProfilesStruct(
	fiftyoneDegreesProfilesStruct *profiles);
EXTERNAL void *(FIFTYONEDEGREES_CALL_CONV *fiftyoneDegreesMalloc)(size_t __size);
EXTERNAL void *(FIFTYONEDEGREES_CALL_CONV *fiftyoneDegreesCalloc)(size_t __nmemb, size_t __size);
EXTERNAL void (FIFTYONEDEGREES_CALL_CONV *fiftyoneDegreesFree)(void *__ptr);
EXTERNAL size_t fiftyoneDegreesGetProviderSizeWithPropertyString(
	const char *fileName,
	const char *properties,
	int poolSize,
	int cacheSize);
EXTERNAL size_t fiftyoneDegreesGetProviderSizeWithPropertyCount(
	const char *fileName,
	int propertyCount,
	int poolSize,
	int cacheSize);
EXTERNAL int32_t fiftyoneDegreesGetMaxPropertyValueLength(const fiftyoneDegreesDataSet *dataSet, char *propertyName);
EXTERNAL fiftyoneDegreesWorkset* fiftyoneDegreesCreateWorkset(const fiftyoneDegreesDataSet *dataSet);
EXTERNAL void fiftyoneDegreesFreeWorkset(const fiftyoneDegreesWorkset *ws);
EXTERNAL void fiftyoneDegreesDestroy(const fiftyoneDegreesDataSet *dataSet);
EXTERNAL void fiftyoneDegreesWorksetPoolRelease(fiftyoneDegreesWorksetPool *pool, fiftyoneDegreesWorkset *ws);