rust/pattern_c.rs

extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Gets all the profiles within the supplied profiles list"]
    #[doc = " that relate to the supplied property value pair."]
    #[doc = " @param dataSet pointer to a 51Degrees data set."]
    #[doc = " @param propertyName the name of the property to match as a string."]
    #[doc = " @param valueName the name of the property's value to match as a string."]
    #[doc = " @param profilesList a pointer to the profiles structure to filter."]
    #[doc = " @returns fiftyoneDegreesProfilesStruct* pointer to a profiles structure."]
    pub fn fiftyoneDegreesFindProfilesInProfiles(
        dataSet: *const fiftyoneDegreesDataSet,
        propertyName: *const ::std::os::raw::c_char,
        valueName: *const ::std::os::raw::c_char,
        profilesList: *mut fiftyoneDegreesProfilesStruct,
    ) -> *mut fiftyoneDegreesProfilesStruct;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Frees a profiles structure returned from either the"]
    #[doc = " fiftyoneDegreesFindProfiles or fiftyoneDegreesFindProfilesInProfiles"]
    #[doc = " function."]
    #[doc = " @param profiles the profiles list to be freed."]
    pub fn fiftyoneDegreesFreeProfilesStruct(profiles: *mut fiftyoneDegreesProfilesStruct);
}
extern "C" {
    pub static mut fiftyoneDegreesMalloc:
        ::std::option::Option<unsafe extern "C" fn(__size: usize) -> *mut ::std::os::raw::c_void>;
}
extern "C" {
    pub static mut fiftyoneDegreesCalloc: ::std::option::Option<
        unsafe extern "C" fn(__nmemb: usize, __size: usize) -> *mut ::std::os::raw::c_void,
    >;
}
extern "C" {
    pub static mut fiftyoneDegreesFree:
        ::std::option::Option<unsafe extern "C" fn(__ptr: *mut ::std::os::raw::c_void)>;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Calculates the amount of memory that the provider will need to allocate for"]
    #[doc = " the given data file and initialisation parameters. This should be used with"]
    #[doc = " the fiftyoneDegreesInitProviderWithPropertyString function."]
    #[doc = " NOTE: This function will over estimate by about 10 bytes to account for a"]
    #[doc = " possible increase in http headers."]
    #[doc = " @param fileName the file path of the data file."]
    #[doc = " @param properties the comma separated string of properties that will be"]
    #[doc = " initialised."]
    #[doc = " @param poolSize the number of work sets the pool will contain."]
    #[doc = " @param cacheSize the size of the User-Agent cache."]
    #[doc = " @return size_t the total size in bytes that is needed to initilaise the"]
    #[doc = " provider with the given parameters."]
    pub fn fiftyoneDegreesGetProviderSizeWithPropertyString(
        fileName: *const ::std::os::raw::c_char,
        properties: *const ::std::os::raw::c_char,
        poolSize: ::std::os::raw::c_int,
        cacheSize: ::std::os::raw::c_int,
    ) -> usize;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Calculates the amount of memory that the provider will need to allocate for"]
    #[doc = " the given data file and initialisation parameters. This should be used with"]
    #[doc = " the fiftyoneDegreesInitProviderWithPropertyArray function."]
    #[doc = " NOTE: This function will over estimate by about 10 bytes to account for a"]
    #[doc = " possible increase in http headers."]
    #[doc = " @param fileName the file path of the data file."]
    #[doc = " @param propertyCount the number of properties in the properties array."]
    #[doc = " @param poolSize the number of work sets the pool will contain."]
    #[doc = " @param cacheSize the size of the User-Agent cache."]
    #[doc = " @return size_t the total size in bytes that is needed to initialise the"]
    #[doc = " provider with the given parameters."]
    pub fn fiftyoneDegreesGetProviderSizeWithPropertyCount(
        fileName: *const ::std::os::raw::c_char,
        propertyCount: ::std::os::raw::c_int,
        poolSize: ::std::os::raw::c_int,
        cacheSize: ::std::os::raw::c_int,
    ) -> usize;
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Finds the maximum string length of the values associated with the given"]
    #[doc = " property name."]
    #[doc = " @param dataSet pointer to a fiftyoneDegreesDataSet."]
    #[doc = " @param propertyName the name of the property to find the value length for."]
    #[doc = " @returns int32_t the maximum string length of the values associated with the"]
    #[doc = " given property or -1 if the property was not found."]
    pub fn fiftyoneDegreesGetMaxPropertyValueLength(
        dataSet: *const fiftyoneDegreesDataSet,
        propertyName: *mut ::std::os::raw::c_char,
    ) -> i32;
}
extern "C" {
    #[doc = " OBSOLETE METHODS - RETAINED FOR BACKWARDS COMPAITABILITY"]
    pub fn fiftyoneDegreesCreateWorkset(
        dataSet: *const fiftyoneDegreesDataSet,
    ) -> *mut fiftyoneDegreesWorkset;
}
extern "C" {
    pub fn fiftyoneDegreesFreeWorkset(ws: *const fiftyoneDegreesWorkset);
}
extern "C" {
    pub fn fiftyoneDegreesDestroy(dataSet: *const fiftyoneDegreesDataSet);
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Releases the workset provided back to the pool making it available for future"]
    #[doc = " use."]
    #[doc = ""]
    #[doc = " The method is obsolete as all worksets now have a pool associated with them"]
    #[doc = " which used when returning the work set to the pool."]
    #[doc = ""]
    #[doc = " @param pool containing work sets"]
    #[doc = " @param ws workset to be placed back on the queue"]
    pub fn fiftyoneDegreesWorksetPoolRelease(
        pool: *mut fiftyoneDegreesWorksetPool,
        ws: *mut fiftyoneDegreesWorkset,
    );
}
extern "C" {
    #[doc = " \\ingroup FiftyOneDegreesFunctions"]
    #[doc = " Determines if the compiled code supports multi threading."]
    #[doc = " @return boolean where true means multi threading is supported."]
    pub fn fiftyoneDegreesGetIsThreadSafe() -> ::std::os::raw::c_int;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
